log
Sun, May  4, 2025  2:36:48 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  2:36:57 PM: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6d12db6
Sun, May  4, 2025  2:44:21 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  5|7
total_score: 5/70
cb05e7f
Sun, May  4, 2025  2:45:50 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
a57fcba
Sun, May  4, 2025  2:47:50 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
1c6b590
Sun, May  4, 2025  2:49:18 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
f01fb98
Sun, May  4, 2025  2:51:23 PM: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
7be6ea4
Sun, May  4, 2025  2:53:25 PM: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
f02841f
Sun, May  4, 2025  2:53:54 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
359be78
Sun, May  4, 2025  2:54:42 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|6
total_score: 15/70
5bc4dd4
Sun, May  4, 2025  2:56:54 PM: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
830dbdd
Sun, May  4, 2025  3:13:31 PM: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
afe079d
Sun, May  4, 2025  3:14:08 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
11301dc
Sun, May  4, 2025  3:17:01 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
c8b1858
Sun, May  4, 2025  3:43:25 PM: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:95:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if (tree -> root == NULL)
     ^~
treemap.c:97:9: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         TreeNode *aux = searchTreeMap(tree, node -> pair -> key);
         ^~~~~~~~
treemap.c:97:25: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
         TreeNode *aux = searchTreeMap(tree, node -> pair -> key);
                         ^~~~~~~~~~~~~
treemap.c:112:24: error: suggest parentheses around comparison in operand of '^' [-Werror=parentheses]
         if(aux -> left == NULL ^ aux -> right == NULL) {
                        ^
cc1.exe: all warnings being treated as errors
acf3205
Sun, May  4, 2025  3:45:29 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
8b4ea6d
Sun, May  4, 2025  3:46:46 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
e2095ea
Sun, May  4, 2025  3:49:53 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:168:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return first;
            ^~~~~
cc1.exe: all warnings being treated as errors
bae9ffd
Sun, May  4, 2025  3:50:01 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
5568a9d
Sun, May  4, 2025  4:34:09 PM: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  22|2
total_score: 50/70
cd80697
